--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     ]
   },
   "main": "server/index.js",
-  "proxy": "http://localhost:3005"
+  "proxy": "http://localhost:3005",
+  "nodemonConfig": {
+    "ignore": ["src"]
+  }
 }
