--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "redux-promise-middleware": "^6.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +41,8 @@
   "main": "server/index.js",
   "proxy": "http://localhost:3005",
   "nodemonConfig": {
-    "ignore": ["src"]
+    "ignore": [
+      "src"
+    ]
   }
 }
